--- a/programmer_profile.html
+++ b/programmer_profile.html
@@ -8,19 +8,22 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   >
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Fahkwang:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     body {
-      background: #2e2e2e;
-      color: #333;
+      background: rgb(131, 132, 190);
+      color: #750202;
+      font-family: Fahkwang;
     }
     .card {
-      background: #4e4e4e;
+      background: #342d8f;
       border-radius: 12px;
     }
     .skill-badge {
-      background: #e6ecf3;
-      color: #333;
+      background: #f0f1f3;
+      color: #5f2a2a;
       border-radius: 20px;
       padding: 6px 14px;
       font-size: 0.85rem;
@@ -57,17 +60,17 @@
           <!-- Skills -->
           <h5 class="mt-3 mb-2">ทำอะไรได้บ้าง</h5>
           <div class="d-flex flex-wrap gap-2 mb-3">
-            <span class="skill-badge">HTML</span>
-            <span class="skill-badge">CSS</span>
-            <span class="skill-badge">JavaScript</span>
-            <span class="skill-badge">Bootstrap</span>
-            <span class="skill-badge">Python</span>
+            <span class="skill-badge btn btn-info">HTML</span>
+            <span class="skill-badge btn btn-primary">CSS</span>
+            <span class="skill-badge btn btn-outline-secondary">JavaScript</span>
+            <span class="skill-badge btn btn-sm">Bootstrap</span>
+            <span class="skill-badge btn btn-primary">Python</span>
           </div>
 
           <!-- Buttons -->
           <div class="d-flex gap-2">
             <a href="#" class="btn btn-primary">ดูแลงาน</a>
-            <a href="#" class="btn btn-outline-secondary">GitHub</a>
+            <a href="#" class="btn btn-info">GitHub</a>
           </div>
 
         </div>
